<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation">

    <string name="app_name">Media Geolocalization</string>
    
    <string name="action_settings" tools:ignore="MissingTranslation">Paramètres</string>
    
    <!-- Drawer menu -->
    <string-array name="menu_options_array" tools:ignore="MissingTranslation">
        <item>Photo</item>
        <item>Historique</item>
        <item>Compte</item>
        <item tools:ignore="MissingTranslation">Carte</item>
        <item tools:ignore="MissingTranslation">Utilisateurs</item>
    </string-array>
	<string name="drawer_open" tools:ignore="MissingTranslation">Ouvrir le menu tiroir</string>
    <string name="drawer_close" tools:ignore="MissingTranslation">Fermer le menu tiroir</string>
    
    <!-- Take picture activity -->
    <string name="photo" tools:ignore="MissingTranslation">Photo</string>
   	<string name="take_picture">Prendre une photo</string>
    <string name="photo_file" tools:ignore="MissingTranslation,MissingTranslation">com.mediageoloc.ata.photoFile</string>
    <string name="apply_NB_filter" tools:ignore="MissingTranslation,MissingTranslation">Noir et Blanc</string>
    
    <!-- Historic activity -->
    <string name="title_activity_historic_media" tools:ignore="MissingTranslation,MissingTranslation">Historique</string>
    
    <!-- User account activity -->
    <string name="title_activity_user_account" tools:ignore="MissingTranslation,MissingTranslation">Mon compte</string>
    <string name="user_last_name">Nom</string>
    <string name="user_first_name" tools:ignore="MissingTranslation,MissingTranslation">Prénom</string>
    <string name="user_mail">Mail</string>
    <string name="user_phone" tools:ignore="MissingTranslation">Tel</string>
    
    <!-- Followers activity -->
    <string name="see_followers" tools:ignore="MissingTranslation">Voir mes followers</string>
    <string name="title_activity_followers">Mes Followers</string>
  
    <!-- Map activity -->
    <string name="title_activity_map">Carte</string>
    <string name="google_services_unavailable">Votre matériel n\'est pas compatible</string>

    <!-- Users activity -->
    <string name="see_users">Voir les users</string>
    <string name="title_activity_users">Les Utilisateurs</string>
    
    <!-- Generic controls -->
    <string name="save_button">Enregistrer</string>
    <string name="cancel_button">Annuler</string>
    <string name="edit_button">Modifier</string>
    <string name="ok_button">OK</string>
    
</resources>
