<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/editMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/user_first_name" />

        <EditText
            android:id="@+id/firstNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textView1"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:padding="10dp"
            android:text="@string/user_last_name" />

        <EditText
            android:id="@+id/lastNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_toRightOf="@id/textView2"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:padding="10dp"
            android:text="@string/user_mail" />

        <EditText
            android:id="@+id/userMailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastName"
            android:layout_toRightOf="@id/textView3"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:padding="10dp"
            android:text="@string/user_phone" />

        <EditText
            android:id="@+id/telET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userMail"
            android:layout_toRightOf="@id/textView4"
            android:inputType="phone"
            android:padding="10dp" />

        <Button
            android:id="@+id/saveEditUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telET"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/cancelEditUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/telET"
            android:layout_toRightOf="@id/saveEditUserButton"
            android:text="@string/cancel_button" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/displayMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
         >

        <TextView
            android:id="@+id/firstNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/lastNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/mailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:padding="10dp"/>

        <Button
            android:id="@+id/editUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:text="@string/edit_button" />
    </RelativeLayout>

    <Button
        android:id="@+id/showFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:gravity="bottom"
        android:padding="10dp"
        android:text="@string/see_followers" />

</RelativeLayout>